Fix gap issue

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -68,7 +68,7 @@ button {
   top: 0;
   padding: 60px 0 60px 0;
   width: 100%;
-  background-color: rgba(255, 255, 255, 0.8);
+  background-color: #ffffff;
 }
 
 /* footer */
@@ -78,12 +78,12 @@ button {
   display: flex;
   align-items: center;
   gap: 12px;
-  bottom: 30px;
-  right: 35px;
+  top: 15px;
+  left: 20px;
 }
 
 .footer i {
-  font-size: 1.5rem;
+  font-size: 1rem;
 }
 
 /* transition between sections */
@@ -125,5 +125,16 @@ button {
     display: flex;
     flex-direction: column;
     gap: 20px;
+  }
+
+  .footer {
+    top: auto;
+    left: auto;
+    bottom: 20px;
+    right: 30px;
+  }
+
+  .footer i {
+    font-size: 1.5rem;
   }
 }
